cpp compile test

--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1d27367724be6365df587bf1c56e3cb30dd60e036db463715b63c69daaecfcbe"
+  "signature": "sha256:c4dda6664d4eb5266873e7dd6660265d8d59a02bfbe184456ab14975111f00e9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -115,8 +115,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 5
+     "outputs": [
+      {
+       "ename": "IndentationError",
+       "evalue": "unexpected indent (cppmagic.py, line 15)",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[1;36m  File \u001b[1;32m\"cppmagic.py\"\u001b[1;36m, line \u001b[1;32m15\u001b[0m\n\u001b[1;33m    compile = self.shell.getoutput(\"g++ {0:s} -o {1:s}\".format(source_filename, program_filename))\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
@@ -148,6 +157,78 @@
      "metadata": {},
      "outputs": [],
      "prompt_number": 9
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%cpp\n",
+      "#include<iostream>\n",
+      "int main()\n",
+      "{\n",
+      "    std::cout << \"Hello world!\";\n",
+      "}"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "ERROR: Cell magic `%%cpp` not found.\n"
+       ]
+      }
+     ],
+     "prompt_number": 1
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%load_ext cppmagic"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "cpp?"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%cpp\n",
+      "#include<iostream>\n",
+      "int main()\n",
+      "{\n",
+      "    std::cout << \"Hello world!\";\n",
+      "}"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 6,
+       "text": [
+        "[\"'temp.exe' is not recognized as an internal or external command,\",\n",
+        " 'operable program or batch file.']"
+       ]
+      }
+     ],
+     "prompt_number": 6
     },
     {
      "cell_type": "code",
